--- a/styles.css
+++ b/styles.css
@@ -96,7 +96,7 @@ footer ul {
      align-self: flex-end;
  }
  footer ul li a {
-     text-decoration: none;\
+     text-decoration: none;
      color: #c1c6ce;
  }
 
@@ -104,4 +104,50 @@ footer ul {
      width: 40%;
  }
 
- footer p
+ footer p {
+     font-size: 0.8em;
+ }
+
+ @media (min-width: 1040px) {
+     .container {
+         grid-template-areas: 
+            "sidebar content"
+            "sidebar footer";
+        grid-template-columns: 380px 1fr;
+        grid-template-rows: 1fr auto;  
+     }
+     nav ul {
+         display: flex;
+         justify-content: space-between;
+         flex-direction: column;
+     }
+     .sidebar {
+        background: #ad5389;  /* fallback for old browsers */
+        background: -webkit-linear-gradient(to left, #3c1053, #ad5389);  /* Chrome 10-25, Safari 5.1-6 */
+        background: linear-gradient(to left, #3c1053, #ad5389); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+        padding-top: 3em;
+     }
+     .hero {
+         text-align: left;
+         margin:  2em auto;
+     }
+     .hero img {
+         width: 250px;
+         float: right;
+     }
+     .hero h1 {
+         font-size: 3em;
+     }
+     .hero p {
+         width: 60%
+     }
+     footer ul {
+         max-width: 960px;
+         margin: 0;
+         padding: 2em 0;
+     }
+    
+     svg {
+         width: 20%;
+     }
+ }
